--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,14 @@
     </div>
   </div>
   </div>
-  <div class="mt-16 text-center text-red-600 font-semibold text-lg">
-  ⚠️ <span class="text-black">죄송합니다.</span> 업데이트 중 중요한 파일이 날아가서<br/>
-  <span class="text-blue-700 font-bold">금주 모드A/B는 2부터, 7부터 시작합니다.</span> 🙏
+<!-- 안내문 하단에 추가 -->
+<div class="mt-12 text-center text-xs text-gray-500">
+  ⚠️ <strong class="text-red-500">죄송합니다.</strong> 업데이트 중 중요한 파일이 날아가 🙏  
+  <span class="text-gray-700">금주 모드A/B는 <strong class="text-blue-600">2</strong>와 <strong class="text-blue-600">7</strong>부터 시작합니다.</span>  
+  <br />
+  <span class="italic text-[10px] text-gray-400">* 아니 근데 서버비도 내가 지불하고 공짜로 쓰게 해주는데 궁시렁궁시렁... 🤖</span>
 </div>
+
   <!-- 히든 설정창 탭 버튼 -->
   <div id="settingsTabs" class="hidden mt-10 space-x-2">
     <button class="px-4 py-2 bg-gray-200 rounded" data-tab="a4">📄 A4 설정</button>
