--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,22 @@ addFieldBtn.addEventListener("click", () => {
   input.className = "border p-2 rounded w-48";
   input.placeholder = "값 입력 또는 자동";
 
+  // ✅ 하이픈 2개 이상 감지 로직
+  input.addEventListener("input", () => {
+    const hyphenCount = (input.value.match(/-/g) || []).length;
+    if (hyphenCount > 1) {
+      Toastify({
+        text: "❌ 하이픈(-)은 한 개까지만 입력할 수 있습니다.",
+        duration: 3000,
+        style: { background: "red" },
+      }).showToast();
+      // 두 번째 이후 하이픈 제거
+      input.value = input.value.replace(/-(?=[^-]*-)/g, "");
+    }
+
+    generateBarcode();
+  });
+
   wrapper.appendChild(select);
   fieldsContainer.appendChild(wrapper);
 
