--- a/public/index.html
+++ b/public/index.html
@@ -279,11 +279,11 @@ async function getFinalBarcodesFromServer(count) {
 
   const finalPrefix = combinedParts.join("-");
 
-  const response = await fetch("https://fksecurity.onrender.com/next-barcode", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ prefix: finalPrefix, count })
-  });
+const response = await fetch(`https://fksecurity.onrender.com/next-barcode?_=${Date.now()}`, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ prefix: finalPrefix, count })
+});
 
   // ✅ 중복 에러 발생 시 처리
   if (response.status === 409) {
