--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,9 @@ addFieldBtn.addEventListener("click", () => {
 
   // ✅ 하이픈 2개 이상 감지 로직
 input.addEventListener("input", () => {
-  const hyphenCount = (input.value.match(/-/g) || []).length;
+  const val = input.value;
+  const hyphenCount = (val.match(/-/g) || []).length;
+
   if (hyphenCount > 1) {
     Toastify({
       text: "❌ 하이픈(-)은 한 개까지만 입력할 수 있습니다.",
@@ -142,12 +144,14 @@ input.addEventListener("input", () => {
       style: { background: "red" },
     }).showToast();
 
-    // 첫 번째 하이픈까지만 남기고 나머지 제거
-    const parts = input.value.split("-");
-    input.value = parts.slice(0, 2).join("-");
+    // 첫 번째 하이픈까지만 남기고 나머지는 다 제거
+    const firstIdx = val.indexOf("-");
+    const cleanVal = val.slice(0, firstIdx + 1) + val.slice(firstIdx + 1).replace(/-/g, "");
+    input.value = cleanVal;
   }
 
-  generateBarcode();
+  // ✨ 여기는 무조건 나중에 실행되도록
+  setTimeout(generateBarcode, 0);
 });
 
   wrapper.appendChild(select);
