--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   ⚠️ <strong class="text-red-500">죄송합니다.</strong> 업데이트 중 중요한 파일이 날아가 🙏  
   <span class="text-gray-700">금주 모드A/B는 <strong class="text-blue-600">2</strong>와 <strong class="text-blue-600">7</strong>부터 시작합니다.</span>  
   <br />
-  <span class="italic text-[10px] text-gray-400">* 아니 근데 서버비도 내가 지불하고 공짜로 쓰게 해주는데 궁시렁궁시렁... 🤖</span>
+  <span class="italic text-[10px] text-gray-400">* 해당 페이지의 코드 및 로직의 소유권은 창작자에게 있으며 탈취 시도 시 법적 조치 대상이 될 수 있습니다 🤖</span>
 </div>
 
   <!-- 히든 설정창 탭 버튼 -->
