--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   ⚠️ <strong class="text-red-500">죄송합니다.</strong> 업데이트 중 중요한 파일이 날아가 🙏  
   <span class="text-gray-700">금주 모드A/B는 <strong class="text-blue-600">2</strong>와 <strong class="text-blue-600">7</strong>부터 시작합니다.</span>  
   <br />
-  <span class="italic text-[10px] text-gray-400">* 해당 페이지의 코드 및 로직의 소유권은 창작자에게 있으며 탈취 시도 시 법적 조치 대상이 될 수 있습니다 🤖</span>
+  <span class="italic text-[12px] text-gray-400">* 해당 페이지의 코드 및 로직의 소유권은 창작자에게 있으며 탈취 시도 시 법적 조치 대상이 될 수 있습니다 🤖</span>
 </div>
 
   <!-- 히든 설정창 탭 버튼 -->
@@ -328,6 +328,7 @@ async function handlePrint(type) {
         });
       }
       alert("✅ Bixolon 출력 완료");
+      triggerReload();
       return;
     }
 
@@ -378,18 +379,39 @@ async function handlePrint(type) {
       }
     }
 
-    // ✅ 인쇄 명령 및 창 열기
     pdf.autoPrint();
     const blob = await pdf.output("blob");
     const url = URL.createObjectURL(blob);
     window.open(url, "_blank");
+
     console.log("📦 Blob 출력 확인:", blob);
+    triggerReload();
 
   } catch (err) {
     console.error("💥 출력 실패:", err);
     alert("❌ 출력 실패: 서버 또는 연결 상태 확인!");
   }
 }
+
+// ✅ 새로고침 트리거 함수
+function triggerReload() {
+  // 버튼 전부 비활성화
+  const allButtons = document.querySelectorAll("button");
+  allButtons.forEach(btn => btn.disabled = true);
+
+  // 1초 후 강제 새로고침
+  setTimeout(() => location.reload(), 1000);
+
+  // 포커스 복귀 시에도 1회만 새로고침
+  let alreadyReloaded = false;
+  window.onfocus = () => {
+    if (!alreadyReloaded) {
+      alreadyReloaded = true;
+      location.reload();
+    }
+  };
+}
+
 
 
 // 커스텀 프린트 트리거 감지 및 설정창 토글
