--- a/public/dev-index.html
+++ b/public/dev-index.html
@@ -246,35 +246,46 @@ updateDateAndWeek();
 
 // 서버에서 바코드 번호 받아오기
 async function getFinalBarcodesFromServer(count) {
-  const idParts = [];
-  let modeLabel = null;
+  const combinedParts = [];
+  let modeCode = null;
 
   for (const wrapper of fieldsContainer.children) {
     const selectType = wrapper.querySelector("select:first-child");
     const valueInput = wrapper.querySelector("input, select.mode-select");
-
     if (!selectType || !valueInput) continue;
 
-    const val = valueInput.value.trim();
-
     if (selectType.value === "shift") {
-      modeLabel = val === "모드 A" ? "A" : "B";
+      modeCode = valueInput.value === "모드 A" ? "0" : "5";
+    } else if (selectType.value === "serial") {
+      continue;
     } else {
-      idParts.push(val);
+      combinedParts.push(valueInput.value.trim());
     }
   }
 
-  const id = idParts.join("-");
-  const week = getCompanyWeekNumber(new Date());
+  const weekNumber = getCompanyWeekNumber(new Date());
+  if (modeCode !== null) {
+    combinedParts.push(`${weekNumber}${modeCode}`);
+  }
 
-  const response = await fetch("https://fksecurity.onrender.com/dev-next-barcode", {
+  const finalPrefix = combinedParts.join("-");
+
+  // ✅ 여기 콘솔 추가
+  console.log("[DEBUG] 요청 바디:", {
+    prefix: finalPrefix,
+    count,
+    mode: modeCode === "0" ? "A" : "B",
+    idParts: finalPrefix.split("-") // 대충 임시 조합
+  });
+
+  const response = await fetch(`https://fksecurity.onrender.com/dev-next-barcode?_=${Date.now()}`, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
-      id,
-      week,
-      mode: modeLabel,
-      count
+      prefix: finalPrefix,
+      count,
+      mode: modeCode === "0" ? "A" : "B",
+      idParts: finalPrefix.split("-") // 이거 서버에서 필요할 경우 추가
     })
   });
 
@@ -512,34 +523,7 @@ document.getElementById("printA4").addEventListener("click", () => handlePrint("
 document.getElementById("printBixolon").addEventListener("click", () => handlePrint("bixolon"));
 document.getElementById("printLabel").addEventListener("click", () => handlePrint("label"));
 
-(function detectDevToolsAbuse() {
-  let triggered = false;
 
-  const warnAndRedirect = () => {
-    if (triggered) return;
-    triggered = true;
-    alert("⚠️ 해당 페이지는 회사의 자산이 아닌 개인 자산으로 로직 탈취는 민,형사상 고발 대상이 됩니다.\n\nAI 돌리고 싶으면 귀하가 직접 로직 짜시기 바랍니다.");
-    location.href = "about:blank";
-  };
-
-  // 창 크기 급변 감지
-  setInterval(() => {
-    const w = window.outerWidth - window.innerWidth;
-    const h = window.outerHeight - window.innerHeight;
-    if (w > 160 || h > 160) {
-      warnAndRedirect();
-    }
-  }, 1000);
-
-  // 콘솔 열기 감지
-  const bait = new Image();
-  Object.defineProperty(bait, 'id', {
-    get() {
-      warnAndRedirect();
-    }
-  });
-  console.log('%c', bait);
-})();
 
 </script>
 </body>
