--- a/public/dev-index.html
+++ b/public/dev-index.html
@@ -246,8 +246,8 @@ updateDateAndWeek();
 
 // 서버에서 바코드 번호 받아오기
 async function getFinalBarcodesFromServer(count) {
-  const combinedParts = [];
   let modeCode = null;
+  const input = document.querySelector("input");
 
   for (const wrapper of fieldsContainer.children) {
     const selectType = wrapper.querySelector("select:first-child");
@@ -255,23 +255,17 @@ async function getFinalBarcodesFromServer(count) {
     if (!selectType || !valueInput) continue;
 
     if (selectType.value === "shift") {
-      modeCode = valueInput.value === "모드 A" ? "0" : "5";
-    } else if (selectType.value === "serial") {
-      continue;
-    } else {
-      combinedParts.push(valueInput.value.trim());
+      modeCode = valueInput.value === "모드 A" ? "A" : "B";
     }
   }
 
   const weekNumber = getCompanyWeekNumber(new Date());
-
-  // ✅ 주차 + 모드 코드 조합은 서버에서 하도록 프론트에서 제외
-  const finalPrefix = combinedParts.join("-");
+  const finalPrefix = input.value.trim();
 
   console.log("[DEBUG] 요청 바디:", {
     prefix: finalPrefix,
     count,
-    mode: modeCode === "0" ? "A" : "B",
+    mode: modeCode === "모드 A" ? "A" : "B",
     idParts: finalPrefix.split("-")
   });
 
