--- a/public/dev-index.html
+++ b/public/dev-index.html
@@ -246,27 +246,23 @@ updateDateAndWeek();
 
 // 서버에서 바코드 번호 받아오기
 async function getFinalBarcodesFromServer(count) {
+  const input = fieldsContainer.querySelector("input[type='text']");
+  const modeSelector = fieldsContainer.querySelector("select.mode-select");
+
   let modeLabel = null;
-  const input = document.querySelector("input");
-
-  for (const wrapper of fieldsContainer.children) {
-    const selectType = wrapper.querySelector("select:first-child");
-    const valueInput = wrapper.querySelector("input, select.mode-select");
-    if (!selectType || !valueInput) continue;
-
-    if (selectType.value === "shift") {
-      modeLabel = valueInput.value === "모드 A" ? "A" : "B";
-    }
+  if (modeSelector) {
+    modeLabel = modeSelector.value === "모드 A" ? "A" : "B";
   }
 
-  const weekNumber = getCompanyWeekNumber(new Date());
   const finalPrefix = input.value.trim();
+  const weekNumber = getCompanyWeekNumber(new Date());
 
   console.log("[DEBUG] 요청 바디:", {
     prefix: finalPrefix,
     count,
-    mode: modeLabel === "모드 A" ? "A" : "B",
-    idParts: finalPrefix.split("-")
+    mode: modeLabel,
+    idParts: finalPrefix.split("-"),
+    week: weekNumber
   });
 
   const response = await fetch(`https://fksecurity.onrender.com/dev-next-barcode?_=${Date.now()}`, {
@@ -275,7 +271,7 @@ async function getFinalBarcodesFromServer(count) {
     body: JSON.stringify({
       prefix: finalPrefix,
       count,
-  mode: modeLabel === "모드 A" ? "A" : "B",
+      mode: modeLabel,
       idParts: finalPrefix.split("-"),
       week: weekNumber
     })
@@ -294,7 +290,6 @@ async function getFinalBarcodesFromServer(count) {
   const data = await response.json();
   return data.barcodes;
 }
-
 
 
 
