--- a/public/dummyindex.html
+++ b/public/dummyindex.html
@@ -191,9 +191,9 @@ addFieldBtn.addEventListener("click", () => {
 
 // 바코드 조합 미리보기 생성
 function generateBarcode() {
-  const idParts = [];
-  let modeLabel = null;
-  const week = getCompanyWeekNumber(new Date());
+  const parts = [];
+  let modeCode = null;
+  const weekNumber = getCompanyWeekNumber(new Date());
 
   for (const wrapper of fieldsContainer.children) {
     const selectType = wrapper.querySelector("select:first-child");
@@ -204,18 +204,21 @@ function generateBarcode() {
     const val = valueInput.value.trim();
 
     if (selectType.value === "shift") {
-      modeLabel = val === "모드 A" ? "A" : "B";
+      modeCode = val === "모드 A" ? "0" : "5";
+    } else if (selectType.value === "serial") {
+      continue;
     } else {
-      idParts.push(val); // 고정값들
+      parts.push(val); // 값이 비어도 넣기
     }
   }
 
-  if (!modeLabel) return;
+  if (modeCode !== null) {
+    parts.push(`${weekNumber}${modeCode}`);
+  }
 
-  const preview = `${idParts.join("-")}-${week}${modeLabel}`;
-  barcodePreview.textContent = preview;
+  // 빈 값은 제거하고 조인
+  barcodePreview.textContent = parts.filter(Boolean).join("-");
 }
-
 
 // 주차 계산 (일요일 시작 주차)
 function getCompanyWeekNumber(date) {
@@ -246,41 +249,40 @@ updateDateAndWeek();
 
 // 서버에서 바코드 번호 받아오기
 async function getFinalBarcodesFromServer(count) {
-  const input = fieldsContainer.querySelector("input[type='text']");
-  const modeSelector = fieldsContainer.querySelector("select.mode-select");
+  const combinedParts = [];
+  let modeCode = null;
+  for (const wrapper of fieldsContainer.children) {
+    const selectType = wrapper.querySelector("select:first-child");
+    const valueInput = wrapper.querySelector("input, select.mode-select");
+    if (!selectType || !valueInput) continue;
 
-  let modeLabel = null;
-  if (modeSelector) {
-    modeLabel = modeSelector.value === "모드 A" ? "A" : "B";
+    if (selectType.value === "shift") {
+      modeCode = valueInput.value === "모드 A" ? "0" : "5";
+    } else if (selectType.value === "serial") {
+      continue;
+    } else {
+      combinedParts.push(valueInput.value.trim());
+    }
   }
 
-  const finalPrefix = input.value.trim();
-  const weekNumber = getCompanyWeekNumber(new Date());
+  if (modeCode !== null) {
+    const weekNumber = getCompanyWeekNumber(new Date());
+    combinedParts.push(`${weekNumber}${modeCode}`);
+  }
 
-  console.log("[DEBUG] 요청 바디:", {
-    prefix: finalPrefix,
-    count,
-    mode: modeLabel,
-    idParts: finalPrefix.split("-"),
-    week: weekNumber
-  });
+  const finalPrefix = combinedParts.join("-");
 
-  const response = await fetch(`https://fksecurity.onrender.com/dev-next-barcode?_=${Date.now()}`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      prefix: finalPrefix,
-      count,
-      mode: modeLabel,
-      idParts: finalPrefix.split("-"),
-      week: weekNumber
-    })
-  });
+const response = await fetch(`https://fksecurity.onrender.com/next-barcode?_=${Date.now()}`, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ prefix: finalPrefix, count })
+});
 
+  // ✅ 중복 에러 발생 시 처리
   if (response.status === 409) {
     const err = await response.json();
-    alert("❗ 다른 사용자가 먼저 작업했습니다.\n잠시 후 다시 시도해주세요.");
-    throw new Error("중복 바코드 요청");
+    alert("❗ 다른 사용자가 먼저 작업했습니다.\n잠시 후 다시 시도하거나 페이지를 새로고침해주세요.");
+    throw new Error("중복된 바코드 요청");
   }
 
   if (!response.ok) {
@@ -290,7 +292,6 @@ async function getFinalBarcodesFromServer(count) {
   const data = await response.json();
   return data.barcodes;
 }
-
 
 
 // 바코드 출력 처리
@@ -511,7 +512,34 @@ document.getElementById("printA4").addEventListener("click", () => handlePrint("
 document.getElementById("printBixolon").addEventListener("click", () => handlePrint("bixolon"));
 document.getElementById("printLabel").addEventListener("click", () => handlePrint("label"));
 
+(function detectDevToolsAbuse() {
+  let triggered = false;
 
+  const warnAndRedirect = () => {
+    if (triggered) return;
+    triggered = true;
+    alert("⚠️ 해당 페이지는 회사의 자산이 아닌 개인 자산으로 로직 탈취는 민,형사상 고발 대상이 됩니다.\n\nAI 돌리고 싶으면 귀하가 직접 로직 짜시기 바랍니다.");
+    location.href = "about:blank";
+  };
+
+  // 창 크기 급변 감지
+  setInterval(() => {
+    const w = window.outerWidth - window.innerWidth;
+    const h = window.outerHeight - window.innerHeight;
+    if (w > 160 || h > 160) {
+      warnAndRedirect();
+    }
+  }, 1000);
+
+  // 콘솔 열기 감지
+  const bait = new Image();
+  Object.defineProperty(bait, 'id', {
+    get() {
+      warnAndRedirect();
+    }
+  });
+  console.log('%c', bait);
+})();
 
 </script>
 </body>
