페이지 수정

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 
   if (afterStart && beforeEnd) {
     alert("소통 좋아하시는 분께 문의하세요 (KST 06:00~18:30 차단)");
-    location.href = "https://fksecurity.onrender.com/banned"; // 이동할 페이지 주소
+    location.href = "https://fksecurity.onrender.com/public/banned"; // 이동할 페이지 주소
   }
 })();
 const { jsPDF } = window.jspdf;
